# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

pybind_extension(
    name = "libpsi",
    srcs = ["libpsi.cc"],
    linkopts = select({
        "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
        "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc"],
        "//conditions:default": [],
    }),
    deps = [
        "//cpp/psi:psi",
    ],
)

py_library(
    name = "psi_lib",
    srcs = ["__init__.py"],  # 添加一个空的__init__.py文件
    data = [":libpsi.so"],  # 使用.so扩展名
    imports = ["."],
)


py_test(
    name = "volepsi_test",
    srcs = ["volepsi_test.py"],
    deps = [":psi_lib"],
)

py_test(
    name = "ecdh_psi_test",
    srcs = ["ecdh_psi_test.py"],
    deps = [":psi_lib"],
)


# 添加一个别名目标，使 libpsi.so 可以被直接引用
filegroup(
    name = "libpsi_so",
    srcs = [":libpsi.so"],
)
