load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")
load("//bazel:curve.bzl", "curve_cc_binary", "curve_cc_library", "curve_cc_test")

package(default_visibility = ["//visibility:public"])

curve_cc_library(
    name = "psi",
    srcs = ["psi.cc"],
    hdrs = ["psi.h"],
    linkopts = select({
    "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
    "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc"],
    "//conditions:default": [],
    }),
    deps = [
        "//cpp/psi/volepsi:vole_psi",
    ],
)



