# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

pybind_extension(
    name = "spllib",
    srcs = ["spllib.cc"],
    linkopts = select({
        "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
        "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc", "-Wl,--allow-multiple-definition"],
        "//conditions:default": ["-Wl,-multiply_defined,suppress"],
    }),
    deps = [
        "//cpp/psi:psi",
        "//cpp/key_exchange:key_exchange",
        "//cpp/tools/network:network_utils",
    ],
)

py_library(
    name = "spllib_lib",
    srcs = ["channel.py", "psi.py", "key_exchange.py"],  # 添加一个空的__init__.py文件
    data = [":spllib.so"],  # 使用.so扩展名
    imports = ["."],
)

# 添加一个别名目标，使 spllib.so 可以被直接引用
filegroup(
    name = "spllib_so",
    srcs = [":spllib.so"],
)
