load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")
load("//bazel:curve.bzl", "curve_cc_binary", "curve_cc_library", "curve_cc_test")

package(default_visibility = ["//visibility:public"])

curve_cc_library(
    name = "ecdh_ke",
    srcs = ["ecdh_ke.cc"],
    hdrs = ["ecdh_ke.h"],
    linkopts = select({
        "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
        "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc"],
        "//conditions:default": [],
    }),
    deps = [
        "@psi//psi/key_exchange/ecdhke:ecdhke",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/link:context",
        "//cpp/tools/network:network_utils",
    ],
)


curve_cc_binary(
    name = "ecdh_ke_test",
    srcs = ["ecdh_ke_test.cc"],
    deps = [
        ":ecdh_ke",
    ],
)



