load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")
load("//bazel:curve.bzl", "curve_cc_binary", "curve_cc_library", "curve_cc_test")

package(default_visibility = ["//visibility:public"])

curve_cc_library(
    name = "circuit_psi",
    srcs = ["circuit_psi.cc"],
    hdrs = ["circuit_psi.h"],
    linkopts = select({
        "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
        "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc"],
        "//conditions:default": [],
    }),
    deps = [
        "@psi//psi/circuit:circuit_psi",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/link:context",
        "//cpp/tools/network:network_utils",
    ],
)


curve_cc_binary(
    name = "circuit_psi_test",
    srcs = ["circuit_psi_test.cc"],
    deps = [
        ":circuit_psi",
    ],
)



