load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")
load("//bazel:curve.bzl", "curve_cc_binary", "curve_cc_library", "curve_cc_test")

package(default_visibility = ["//visibility:public"])

curve_cc_library(
    name = "ecdh_psi",
    srcs = ["ecdh_psi.cc"],
    hdrs = ["ecdh_psi.h"],
    linkopts = select({
        "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
        "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc"],
        "//conditions:default": [],
    }),
    deps = [
        "@psi//psi/ecdh:ecdh_psi",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/link:context",
    ],
)


curve_cc_binary(
    name = "ecdh_psi_test",
    srcs = ["ecdh_psi_test.cc"],
    deps = [
        ":ecdh_psi",
    ],
)



